--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,18 @@
-<header class="site-header">
-
-  <div class="wrap title-wrap">
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-  </div>
-
-  <!-- <div id="header">    
-    <div class='text-center'>
-      <h5>       
-        <a href='http://cs231n.stanford.edu/2015'>[Winter 2015]</a>
-        <a href='http://cs231n.stanford.edu/2016'>[Winter 2016]</a>
-        <a href='http://cs231n.stanford.edu/2017'>[Spring 2017]</a>
-      </h5>
+<header class="navbar navbar-default site-header navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="logo navbar-header title-wrap">
+            <a class="site-title" href="/">
+                    <img src="../assets/img/roboschool.png" alt="logo">
+                </a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/">首页</a></li>
+                <li><a href="schedule">课程</a></li>
+                <li><a href="abel05">硬件平台</a></li>
+                <li><a href="#contact">报名</a></li>
+            </ul>
+        </div>
     </div>
-    <div style="clear:both;"></div>
-  </div> -->   
 
 </header>
