--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">首页</a></li>
                 <li><a href="/schedule">课程</a></li>
-                <li><a href="/abel05">硬件平台</a></li>
+                <li><a href="/abel05">硬件配置</a></li>
                 <li><a href="/reference">参考资料</a></li>
                 <li><a href="/schedule">课程表</a></li>
             </ul>
