--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-default site-header navbar-fixed-top">
+<header class="navbar navbar-default site-header">
     <div class="container-fluid">
         <div class="logo navbar-header title-wrap">
             <a class="site-title" href="/">
